--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DEV QAMTL [2219] Projet [ 34708 ]</title>
+  <title>PreProd QA PRE Prod [1192]  _QA_Email_Key [164]</title>
   
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-messaging.js"></script>
-  <script src="https://lightspeed.dev.ofsys.com/T/OFC4/WPS/34708/14376/A1ZTwgfuG373FHQUItuv7xkWy8M2lBKf/DI.WebPush-min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-messaging.js"></script>
+<script src="https://demo-wpn.dialoginsight.com/T/OFC4/WPS/164/11/Y2Zj0ZygFSmX4I2tv02ypLsA1pApld2e/DI.WebPush-min.js"></script>
 
 </head>
 <body>
 	
-<p> DEV QAMTL [2219] Projet [34708] </p>
+<p> QA PRE Prod [1192]  _QA_Email_Key [164] </p>
 	
 <label>Adresse courriel du contact</label>
 <input id="email" type="text" style="width:300px;" />
