--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ document.write("<p>Browser Language: " + navigator.language + "</p>");
 document.write("<p>Browser Online: " + navigator.onLine + "</p>");
 document.write("<p>Platform: " + navigator.platform + "</p>");
 document.write("<p>User-agent header: " + navigator.userAgent + "</p>");
+	<p> tests</p>
 </script>
 
 
