--- a/qa_preprod.html
+++ b/qa_preprod.html
@@ -56,7 +56,13 @@
 
 <h2> Site 84 idScenario 363</h2>
 	
-
+ <p> Tests-autos Regression / parcours / mtl_visite_site.js </p>
+ 
+<div> This page call Marketing Auto Legacy with trigger on 3 contacts
+		<li>lmorissette1@dialoginsight.com</li>
+		<li>lmorissette2@dialoginsight.com</li>
+		<li>lmorissette3@dialoginsight.com</li>
+</di>
 
  <br /> <br />
 
