--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PreProd QA PRE Prod [1192]  _QA_Email_Key [164]</title>
-  
-  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-messaging.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-messaging.js"></script>
 <script src="https://demo-wpn.dialoginsight.com/T/OFC4/WPS/164/11/Y2Zj0ZygFSmX4I2tv02ypLsA1pApld2e/DI.WebPush-min.js"></script>
+	
+  <!--script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script-->
+<!--script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-messaging.js"></script-->
+<!--script src="https://demo-wpn.dialoginsight.com/T/OFC4/WPS/164/11/Y2Zj0ZygFSmX4I2tv02ypLsA1pApld2e/DI.WebPush-min.js"></script-->
 
 </head>
 <body>
