--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PreProd QA PRE Prod [1192]  _QA_Email_Key [164]</title>
-
-	
+  <title>QA France [1173] Projet [44]</title>
+  
 <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase-messaging.js"></script>
 <script src="https://demo-wpn.dialoginsight.com/T/OFC4/WPS/164/11/Y2Zj0ZygFSmX4I2tv02ypLsA1pApld2e/DI.WebPush-min.js"></script>
-
+	
 </head>
 <body>
 	
-<p> QA PRE Prod [1192]  _QA_Email_Key [164] </p>
+<p> QA Demo [1192] Projet [164] </p>
 	
 <label>Adresse courriel du contact</label>
 <input id="email" type="text" style="width:300px;" />
